fixing backButton and heart overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -240,20 +240,6 @@ footer {
   width: 100%;
 }
 
-h1 {
-  font-family: "shrikhand", sans-serif, sans-serif;
-  font-size: 2.5rem;
-  font-weight: 400;
-}
-
-h2 {
-  font-size: 2rem;
-}
-
-h3 {
-  margin-bottom: 0.5rem;
-}
-
 a {
   text-decoration: none;
   color: inherit;
@@ -268,6 +254,21 @@ img {
 ul,
 ol {
   list-style-type: none;
+}
+
+h1 {
+  font-family: "shrikhand", sans-serif;
+  font-size: 2.5rem;
+  font-weight: 400;
+  margin-inline: 4rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  margin-bottom: 0.5rem;
 }
 
 header {
@@ -286,11 +287,16 @@ header {
 header .backButton {
   display: block;
   position: absolute;
-  left: 2rem;
+  left: 3rem;
   top: 50%;
   transform: translateY(-50%);
   font-size: 1.5rem;
   opacity: 0.8;
+  margin-right: 3rem;
+}
+header a {
+  display: block;
+  margin-right: 4rem;
 }
 
 .footer {
@@ -635,11 +641,18 @@ header .backButton {
   align-items: center;
   justify-content: space-between;
   flex-direction: row;
-  padding: 4rem 1rem 2rem;
+  padding: 4rem 3rem 4rem 1.5rem;
+  border-radius: 30px 30px 0 0;
 }
 .menu__title h2 {
   font-family: "shrikhand", sans-serif;
   font-weight: 400;
+}
+.menu__title .card__footer-like {
+  display: grid;
+  place-content: center;
+  width: 6rem;
+  height: 6rem;
 }
 
 /*# sourceMappingURL=styles.css.map */
