--- a/sass/base/_rules.scss
+++ b/sass/base/_rules.scss
@@ -24,20 +24,6 @@ footer {
 	width: 100%;
 }
 
-h1 {
-	font-family: $fontTitle, sans-serif;
-	font-size: 2.5rem;
-	font-weight: 400;
-}
-
-h2 {
-	font-size: 2rem;
-}
-
-h3 {
-	margin-bottom: 0.5rem;
-}
-
 a {
 	text-decoration: none;
 	color: inherit;
