--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -9,12 +9,11 @@
 		position: relative;
 
 		.backButton {
+			@include backButton;
+		}
+
+		a {
 			display: block;
-			position: absolute;
-			left: 2rem;
-			top: 50%;
-			transform: translateY(-50%);
-			font-size: 1.5rem;
-			opacity: 0.8;
+			margin-right: 4rem;
 		}
 	}
